// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`normalize.spec.js createKcArtifactNode with correct arguments creates correct structure for the item node 1`] = `
Object {
  "asset_1": Object {
    "name": "Asset 1",
    "type": "asset",
    "value": Array [
      Object {
        "description": null,
        "name": "asset-1.jpg",
        "size": 360791,
        "type": "image/jpeg",
        "url": "https://example.com/asset-1.jpg",
      },
    ],
  },
  "children": Array [],
  "contentType___NODE": "dummyContentTypeId",
  "date_time_1": Object {
    "name": "Date time 1",
    "type": "date_time",
    "value": null,
  },
  "elements": Object {
    "asset_1": Object {
      "name": "Asset 1",
      "type": "asset",
      "value": Array [
        Object {
          "description": null,
          "name": "asset-1.jpg",
          "size": 360791,
          "type": "image/jpeg",
          "url": "https://example.com/asset-1.jpg",
        },
      ],
    },
    "date_time_1": Object {
      "name": "Date time 1",
      "type": "date_time",
      "value": null,
    },
    "linked_items_1": Object {
      "name": "Linked items 1",
      "type": "modular_content",
      "value": Array [
        "content_item_2",
        "content_item_3",
      ],
    },
    "text_1": Object {
      "name": "Text 1",
      "type": "text",
      "value": "Text 1 value",
    },
  },
  "id": "dummyId",
  "internal": Object {
    "contentDigest": "5848b2ee4bb7532cb37dd2e005765388",
    "type": "KenticoCloudItemContentItem_1",
  },
  "linked_items_1": Array [
    Object {
      "elements": Object {
        "linked_items_1": Object {
          "name": "Linked items 1",
          "type": "modular_content",
          "value": Array [
            "content_item_3",
          ],
        },
      },
      "linked_items_1": Array [
        Object {
          "elements": Object {},
          "system": Object {
            "codename": "content_item_3",
            "id": "7e70cb89-9281-4db9-8130-36076ee1e698",
            "language": "default",
            "last_modified": "2018-12-28T00:00:00.3224207Z",
            "name": "Content item 3",
            "sitemap_locations": Array [],
            "type": "content_type",
          },
        },
      ],
      "system": Object {
        "codename": "content_item_2",
        "id": "7e70cb89-9281-4db9-8130-36076ee1e698",
        "language": "default",
        "last_modified": "2018-12-28T00:00:00.3224207Z",
        "name": "Content item 2",
        "sitemap_locations": Array [],
        "type": "content_type",
      },
    },
    Object {
      "elements": Object {},
      "system": Object {
        "codename": "content_item_3",
        "id": "7e70cb89-9281-4db9-8130-36076ee1e698",
        "language": "default",
        "last_modified": "2018-12-28T00:00:00.3224207Z",
        "name": "Content item 3",
        "sitemap_locations": Array [],
        "type": "content_type",
      },
    },
  ],
  "otherLanguages___NODE": Array [],
  "parent": null,
  "system": Object {
    "codename": "content_item_1",
    "id": "7e70cb89-9281-4db9-8130-36076ee1e698",
    "language": "default",
    "last_modified": "2018-12-28T00:00:00.3224207Z",
    "name": "Content item 1",
    "sitemap_locations": Array [],
    "type": "content_type",
  },
  "text_1": Object {
    "name": "Text 1",
    "type": "text",
    "value": "Text 1 value",
  },
  "usedByContentItems___NODE": Array [],
}
`;

exports[`normalize.spec.js createKcArtifactNode with correct arguments creates correct structure for the type node 1`] = `
Object {
  "children": Array [],
  "contentItems___NODE": Array [],
  "elements": Object {
    "asset_1": Object {
      "name": "Asset 1",
      "type": "asset",
    },
    "date_time_1": Object {
      "name": "Date time 1",
      "type": "date_time",
    },
    "linked_items_1": Object {
      "name": "Linked items 1",
      "type": "modular_content",
    },
    "text_1": Object {
      "name": "Text 1",
      "type": "text",
    },
  },
  "id": "dummyId",
  "internal": Object {
    "contentDigest": "cb900aa0651691da8b80c8ac6af4b1bd",
    "type": "KenticoCloudTypeContentType",
  },
  "parent": null,
  "system": Object {
    "codename": "content_type",
    "id": "9ea98d20-a477-455c-b30f-0e3b9d055795",
    "last_modified": "2018-12-28T00:00:00.115595Z",
    "name": "Content type",
  },
  "usedByContentItems___NODE": Array [],
}
`;

exports[`normalize.spec.js parseContentItemContents with a contentItem with a cycle set cycleDetectedProperty and log proper error 1`] = `
Object {
  "elements": Object {
    "asset_1": Object {
      "name": "Asset 1",
      "type": "asset",
      "value": Array [
        Object {
          "description": null,
          "name": "asset-1.jpg",
          "size": 360791,
          "type": "image/jpeg",
          "url": "https://example.com/asset-1.jpg",
        },
      ],
    },
    "date_time_1": Object {
      "name": "Date time 1",
      "type": "date_time",
      "value": null,
    },
    "linked_items_1": Array [
      Object {
        "elements": Object {
          "linked_items_1": Array [
            Object {
              "cycleDetected": true,
              "elements": null,
              "system": Object {
                "codename": "content_item_1",
                "id": "7e70cb89-9281-4db9-8130-36076ee1e698",
                "language": "default",
                "last_modified": "2018-12-28T00:00:00.3224207Z",
                "name": "Content item 1",
                "sitemap_locations": Array [],
                "type": "content_item",
              },
            },
            Object {
              "elements": Object {},
              "system": Object {
                "codename": "content_item_3",
                "id": "7e70cb89-9281-4db9-8130-36076ee1e698",
                "language": "default",
                "last_modified": "2018-12-28T00:00:00.3224207Z",
                "name": "Content item 3",
                "sitemap_locations": Array [],
                "type": "content_item",
              },
            },
          ],
        },
        "system": Object {
          "codename": "content_item_2",
          "id": "7e70cb89-9281-4db9-8130-36076ee1e698",
          "language": "default",
          "last_modified": "2018-12-28T00:00:00.3224207Z",
          "name": "Content item 2",
          "sitemap_locations": Array [],
          "type": "content_item",
        },
      },
      Object {
        "elements": Object {},
        "system": Object {
          "codename": "content_item_3",
          "id": "7e70cb89-9281-4db9-8130-36076ee1e698",
          "language": "default",
          "last_modified": "2018-12-28T00:00:00.3224207Z",
          "name": "Content item 3",
          "sitemap_locations": Array [],
          "type": "content_item",
        },
      },
    ],
    "text_1": Object {
      "name": "Text 1",
      "type": "text",
      "value": "Text 1 value",
    },
  },
  "system": Object {
    "codename": "content_item_1",
    "id": "7e70cb89-9281-4db9-8130-36076ee1e698",
    "language": "default",
    "last_modified": "2018-12-28T00:00:00.3224207Z",
    "name": "Content item 1",
    "sitemap_locations": Array [],
    "type": "content_item",
  },
}
`;

exports[`normalize.spec.js parseContentItemContents with a contentItem without a cycle returns a proper item object 1`] = `
Object {
  "elements": Object {
    "asset_1": Object {
      "name": "Asset 1",
      "type": "asset",
      "value": Array [
        Object {
          "description": null,
          "name": "asset-1.jpg",
          "size": 360791,
          "type": "image/jpeg",
          "url": "https://example.com/asset-1.jpg",
        },
      ],
    },
    "date_time_1": Object {
      "name": "Date time 1",
      "type": "date_time",
      "value": null,
    },
    "linked_items_1": Array [
      Object {
        "elements": Object {
          "linked_items_1": Array [
            Object {
              "elements": Object {},
              "system": Object {
                "codename": "content_item_3",
                "id": "7e70cb89-9281-4db9-8130-36076ee1e698",
                "language": "default",
                "last_modified": "2018-12-28T00:00:00.3224207Z",
                "name": "Content item 3",
                "sitemap_locations": Array [],
                "type": "content_type",
              },
            },
          ],
        },
        "system": Object {
          "codename": "content_item_2",
          "id": "7e70cb89-9281-4db9-8130-36076ee1e698",
          "language": "default",
          "last_modified": "2018-12-28T00:00:00.3224207Z",
          "name": "Content item 2",
          "sitemap_locations": Array [],
          "type": "content_type",
        },
      },
      Object {
        "elements": Object {},
        "system": Object {
          "codename": "content_item_3",
          "id": "7e70cb89-9281-4db9-8130-36076ee1e698",
          "language": "default",
          "last_modified": "2018-12-28T00:00:00.3224207Z",
          "name": "Content item 3",
          "sitemap_locations": Array [],
          "type": "content_type",
        },
      },
    ],
    "text_1": Object {
      "name": "Text 1",
      "type": "text",
      "value": "Text 1 value",
    },
  },
  "system": Object {
    "codename": "content_item_1",
    "id": "7e70cb89-9281-4db9-8130-36076ee1e698",
    "language": "default",
    "last_modified": "2018-12-28T00:00:00.3224207Z",
    "name": "Content item 1",
    "sitemap_locations": Array [],
    "type": "content_type",
  },
}
`;
